--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,5 +1,7 @@
 Sphinx==7.3.7
-sphinx-rtd-theme==2.0.0
+sphinx-book-theme
 plantuml==0.3.0
 sphinxcontrib-plantuml
+sphinx-autobuild
 codespell
+sphinxcontrib-newsfeed
